chore: Avoid Base64 encoding steps in documentation
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/partials/proc_applying-an-application-link-secret-for-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_applying-an-application-link-secret-for-the-bitbucket-server.adoc
@@ -22,20 +22,6 @@ Prepare and apply the application link Secret for the Bitbucket Server.
 
 .Procedure
 
-. Encode the content of the `bitbucket-consumer-key` file to Base64:
-+
-[subs="+quotes,+attributes,+macros"]
-----
-$ echo -n '__<bitbucket-consumer-key file content>__' | base64
-----
-
-. Encode the content of the `bitbucket-shared-secret` file to Base64:
-+
-[subs="+quotes,+attributes,+macros"]
-----
-$ echo -n '__<bitbucket-shared-secret file content>__' | base64
-----
-
 . Prepare the Secret:
 +
 [source,yaml,subs="+quotes,+attributes,+macros"]
@@ -52,16 +38,16 @@ metadata:
     che.eclipse.org/oauth-scm-server: bitbucket
     che.eclipse.org/scm-server-endpoint: __<bitbucket_server_url>__ <2>
 type: Opaque
-data:
-  private.key: __<Base64_content_of_privatepkcs8-stripped.pem>__ <3>
-  consumer.key: __<Base64_content_of_bitbucket-consumer-key>__ <4>
-  shared_secret: __<Base64_content_of_bitbucket-shared-secret>__ <5>
+stringData:
+  private.key: __<Content_of_privatepkcs8-stripped.pem>__ <3>
+  consumer.key: __<Content_of_bitbucket-consumer-key>__ <4>
+  shared_secret: __<Content_of_bitbucket-shared-secret>__ <5>
 ----
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
 <2> The URL of the Bitbucket Server.
-<3> The content of the `privatepkcs8-stripped.pem` file, which was Base64-encoded when the file was generated.
-<4> The content of the `bitbucket-consumer-key` file that you manually encoded to Base64 in step 1.
-<5> The content of the `bitbucket-shared-secret` file that you manually encoded to Base64 in step 2.
+<3> The content of the `privatepkcs8-stripped.pem` file.
+<4> The content of the `bitbucket-consumer-key` file.
+<5> The content of the `bitbucket-shared-secret` file.
 
 . Apply the Secret:
 +
