--- a/modules/administration-guide/partials/proc_applying-an-oauth-consumer-secret-for-the-bitbucket-cloud.adoc
+++ b/modules/administration-guide/partials/proc_applying-an-oauth-consumer-secret-for-the-bitbucket-cloud.adoc
@@ -13,7 +13,7 @@ Prepare and apply an OAuth consumer Secret for the Bitbucket Cloud.
 
 * The OAuth consumer is set up in the Bitbucket Cloud.
 
-* The Base64-encoded values, which were generated when setting up the Bitbucket OAuth consumer, are prepared:
+* The following values, which were generated when setting up the Bitbucket OAuth consumer, are prepared:
 ** Bitbucket OAuth consumer Key
 ** Bitbucket OAuth consumer Secret
 
@@ -36,13 +36,13 @@ metadata:
   annotations:
     che.eclipse.org/oauth-scm-server: bitbucket
 type: Opaque
-data:
-  id: __<Base64_Bitbucket_Oauth_Consumer_Key>__ <2>
-  secret: __<Base64_Bitbucket_Oauth_Consumer_Secret>__ <3>
+stringData:
+  id: __<Bitbucket_Oauth_Consumer_Key>__ <2>
+  secret: __<Bitbucket_Oauth_Consumer_Secret>__ <3>
 ----
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
-<2> The Base64-encoded *Bitbucket OAuth consumer Key*.
-<3> The Base64-encoded *Bitbucket OAuth consumer Secret*.
+<2> The *Bitbucket OAuth consumer Key*.
+<3> The *Bitbucket OAuth consumer Secret*.
 
 . Apply the Secret:
 +
