--- a/modules/administration-guide/partials/proc_applying-the-gitlab-authorized-application-secret.adoc
+++ b/modules/administration-guide/partials/proc_applying-the-gitlab-authorized-application-secret.adoc
@@ -13,7 +13,7 @@ Prepare and apply the GitLab-authorized application Secret.
 
 * Setting up the GitLab authorized application is completed.
 
-* The Base64-encoded values, which were generated when setting up the GitLab authorized application, are prepared:
+* The following values, which were generated when setting up the GitLab authorized application, are prepared:
 ** *GitLab Application ID*
 ** *GitLab Client Secret*
 
@@ -37,14 +37,14 @@ metadata:
     che.eclipse.org/oauth-scm-server: gitlab
     che.eclipse.org/scm-server-endpoint: __<gitlab_server_url>__ <2>
 type: Opaque
-data:
-  id: __<Base64_GitLab_Application_ID>__ <3>
-  secret: __<Base64_GitLab_Client_Secret>__ <4>
+stringData:
+  id: __<GitLab_Application_ID>__ <3>
+  secret: __<GitLab_Client_Secret>__ <4>
 ----
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
 <2> The *GitLab server URL*. Use `https://gitlab.com` for the `SAAS` version.
-<3> The Base64-encoded *GitLab Application ID*.
-<4> The Base64-encoded *GitLab Client Secret*.
+<3> The *GitLab Application ID*.
+<4> The *GitLab Client Secret*.
 
 . Apply the Secret:
 +
