--- a/modules/administration-guide/partials/proc_mounting-a-secret-or-a-configmap-as-an-environment-variable-into-a-container.adoc
+++ b/modules/administration-guide/partials/proc_mounting-a-secret-or-a-configmap-as-an-environment-variable-into-a-container.adoc
@@ -79,9 +79,9 @@ metadata:
     che.eclipse.org/otherkey_env-name: OTHER_ENV
   labels:
    ...
-data:
-  mykey: __<base64 encoded data content here>__
-  otherkey: __<base64 encoded data content here>__
+stringData:
+  mykey: __<data_content_here>__
+  otherkey: __<data_content_here>__
 ----
 or
 [source,yaml]
