--- a/modules/administration-guide/partials/proc_setting-up-an-oauth-2-application-link-on-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-an-oauth-2-application-link-on-the-bitbucket-server.adoc
@@ -12,7 +12,6 @@ Set up an OAuth 2.0 application link on the Bitbucket Server.
 .Prerequisites
 
 * You are logged in to the Bitbucket Server.
-* link:https://www.gnu.org/software/coreutils/base64[`base64`] is installed in the operating system you are using.
 
 .Procedure
 
@@ -22,19 +21,8 @@ Set up an OAuth 2.0 application link on the Bitbucket Server.
 . Enter `pass:c,a,q[{prod-url}]/api/oauth/callback` to the *Redirect URL* field.
 . Select the *Admin - Write*  checkbox in *Application permissions*.
 . Click *Save*.
-. Copy the *Client ID* and encode it to Base64 for use when applying the Bitbucket application link Secret:
-+
-[subs="+quotes,+attributes,+macros"]
-----
-$ echo -n '__<Bitbucket_Client_ID>__' | base64
-----
-
-. Copy the *Client secret* and encode it to Base64 for use when applying the Bitbucket application link Secret:
-+
-[subs="+quotes,+attributes,+macros"]
-----
-$ echo -n '__<Bitbucket_Client_secret>__' | base64
-----
+. Copy and save the *Client ID* for use when applying the Bitbucket application link Secret.
+. Copy and save the *Client secret* for use when applying the Bitbucket application link Secret.
 
 .Additional resources
 
