--- a/modules/administration-guide/partials/proc_setting-up-the-github-oauth-app.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-the-github-oauth-app.adoc
@@ -12,7 +12,6 @@ Set up a GitHub OAuth App using OAuth 2.0.
 .Prerequisites
 
 * You are logged in to GitHub.
-* link:https://www.gnu.org/software/coreutils/base64[`base64`] is installed in the operating system you are using.
 
 .Procedure
 
@@ -29,19 +28,9 @@ Set up a GitHub OAuth App using OAuth 2.0.
 
 . Click *Generate new client secret*.
 
-. Copy the *GitHub OAuth Client ID* and encode it to Base64 for use when applying the GitHub OAuth App Secret:
-+
-[subs="+quotes,+attributes,+macros"]
-----
-$ echo -n '__<github_oauth_client_id>__' | base64
-----
+. Copy and save the *GitHub OAuth Client ID* for use when applying the GitHub OAuth App Secret.
 
-. Copy the *GitHub OAuth Client Secret* and encode it to Base64 for use when applying the GitHub OAuth App Secret:
-+
-[subs="+quotes,+attributes,+macros"]
-----
-$ echo -n '__<github_oauth_client_secret>__' | base64
-----
+. Copy and save the *GitHub OAuth Client Secret* for use when applying the GitHub OAuth App Secret.
 
 .Additional resources
 
