--- a/modules/administration-guide/partials/proc_setting-up-the-gitlab-authorized-application.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-the-gitlab-authorized-application.adoc
@@ -12,7 +12,6 @@ Set up a GitLab authorized application using OAuth 2.0.
 .Prerequisites
 
 * You are logged in to GitLab.
-* link:https://www.gnu.org/software/coreutils/base64[`base64`] is installed in the operating system you are using.
 
 .Procedure
 
@@ -28,19 +27,9 @@ Set up a GitLab authorized application using OAuth 2.0.
 
 . Click *Save application*.
 
-. Copy the *GitLab Application ID* and encode it to Base64 for use when applying the GitLab-authorized application Secret:
-+
-[subs="+quotes,+attributes,+macros"]
-----
-$ echo -n '__<gitlab_application_id>__' | base64
-----
+. Copy and save the *GitLab Application ID* for use when applying the GitLab-authorized application Secret.
 
-. Copy the *GitLab Client Secret* and encode it to Base64 for use when applying the GitLab-authorized application Secret:
-+
-[subs="+quotes,+attributes,+macros"]
-----
-$ echo -n '__<gitlab_client_secret>__' | base64
-----
+. Copy and save the *GitLab Client Secret* for use when applying the GitLab-authorized application Secret.
 
 .Additional resources
 
