--- a/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
@@ -21,8 +21,6 @@ Set up a Microsoft Azure DevOps Services OAuth App using OAuth 2.0.
 ====
 +
 
-* link:https://www.gnu.org/software/coreutils/base64[`base64`] is installed in the operating system you are using.
-
 .Procedure
 
 . Visit link:https://app.vsaex.visualstudio.com/app/register/[].
@@ -38,21 +36,11 @@ Set up a Microsoft Azure DevOps Services OAuth App using OAuth 2.0.
 
 . Click *Create application*.
 
-. Copy the *App ID* and encode it to Base64 for use when applying the Microsoft Azure DevOps Services OAuth App Secret:
-+
-[subs="+quotes,+attributes,+macros"]
-----
-$ echo -n '__<microsoft_azure_devops_services_oauth_app_id>__' | base64
-----
+. Copy and save the *App ID* for use when applying the Microsoft Azure DevOps Services OAuth App Secret.
 
 . Click *Show* to display the *Client Secret*.
 
-. Copy the *Client Secret* and encode it to Base64 for use when applying the Microsoft Azure DevOps Services OAuth App Secret:
-+
-[subs="+quotes,+attributes,+macros"]
-----
-$ echo -n '__<microsoft_azure_devops_services_oauth_client_secret>__' | base64 -w 0
-----
+. Copy and save the *Client Secret* for use when applying the Microsoft Azure DevOps Services OAuth App Secret.
 
 pass:[<!-- vale RedHat.TermsWarnings = YES -->]
 
