--- a/modules/administration-guide/partials/proc_applying-an-oauth-2-application-link-secret-for-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_applying-an-oauth-2-application-link-secret-for-the-bitbucket-server.adoc
@@ -13,7 +13,7 @@ Prepare and apply the OAuth 2.0 application link Secret for the Bitbucket Server
 
 * The application link is set up on the Bitbucket Server.
 
-* The Base64-encoded values, which were generated when setting up the Bitbucket application link, are prepared:
+* The following values, which were generated when setting up the Bitbucket application link, are prepared:
 ** Bitbucket *Client ID*
 ** Bitbucket *Client secret*
 
@@ -37,14 +37,14 @@ metadata:
     che.eclipse.org/oauth-scm-server: bitbucket
     che.eclipse.org/scm-server-endpoint: __<bitbucket_server_url>__ <2>
 type: Opaque
-data:
-  id: __<Base64_Bitbucket_Client_ID>__ <3>
-  secret: __<Base64_Bitbucket_Client_Secret>__ <4>
+stringData:
+  id: __<Bitbucket_Client_ID>__ <3>
+  secret: __<Bitbucket_Client_Secret>__ <4>
 ----
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
 <2> The URL of the Bitbucket Server.
-<3> The Base64-encoded Bitbucket *Client ID*.
-<4> The Base64-encoded Bitbucket *Client secret*.
+<3> The Bitbucket *Client ID*.
+<4> The Bitbucket *Client secret*.
 
 . Apply the Secret:
 +
