--- a/modules/administration-guide/partials/proc_applying-the-github-oauth-app-secret.adoc
+++ b/modules/administration-guide/partials/proc_applying-the-github-oauth-app-secret.adoc
@@ -13,7 +13,7 @@ Prepare and apply the GitHub OAuth App Secret.
 
 * Setting up the GitHub OAuth App is completed.
 
-* The Base64-encoded values, which were generated when setting up the GitHub OAuth App, are prepared:
+* The following values, which were generated when setting up the GitHub OAuth App, are prepared:
 ** *GitHub OAuth Client ID*
 ** *GitHub OAuth Client Secret*
 
@@ -38,15 +38,15 @@ metadata:
     che.eclipse.org/scm-server-endpoint: __<github_server_url>__ <2>
     che.eclipse.org/scm-github-disable-subdomain-isolation: "__<true_or_false>__" <3>
 type: Opaque
-data:
-  id: __<Base64_GitHub_OAuth_Client_ID>__ <4>
-  secret: __<Base64_GitHub_OAuth_Client_Secret>__ <5>
+stringData:
+  id: __<GitHub_OAuth_Client_ID>__ <4>
+  secret: __<GitHub_OAuth_Client_Secret>__ <5>
 ----
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
 <2> This depends on the GitHub product your organization is using: When hosting repositories on GitHub.com or GitHub Enterprise Cloud, omit this line or enter the default `https://github.com`. When hosting repositories on GitHub Enterprise Server, enter the GitHub Enterprise Server URL.
 <3> This line is only added for GitHub Enterprise Server. To disable subdomain isolation, set this to `"true"`. To enable subdomain isolation, set this to `"false"`.
-<4> The Base64-encoded *GitHub OAuth Client ID*.
-<5> The Base64-encoded *GitHub OAuth Client Secret*.
+<4> The *GitHub OAuth Client ID*.
+<5> The *GitHub OAuth Client Secret*.
 
 . Apply the Secret:
 +
