--- a/modules/administration-guide/partials/proc_applying-the-microsoft-azure-devops-services-oauth-app-secret.adoc
+++ b/modules/administration-guide/partials/proc_applying-the-microsoft-azure-devops-services-oauth-app-secret.adoc
@@ -13,7 +13,7 @@ Prepare and apply the Microsoft Azure DevOps Services Secret.
 
 * Setting up the Microsoft Azure DevOps Services OAuth App is completed.
 
-* The Base64-encoded values, which were generated when setting up the Microsoft Azure DevOps Services OAuth App, are prepared:
+* The following values, which were generated when setting up the Microsoft Azure DevOps Services OAuth App, are prepared:
 ** *App ID*
 ** *Client Secret*
 
@@ -36,13 +36,13 @@ metadata:
   annotations:
     che.eclipse.org/oauth-scm-server: azure-devops
 type: Opaque
-data:
-  id: __<Base64_Microsoft_Azure_DevOps_Services_OAuth_App_ID>__# <2>
-  secret: __<Base64_Microsoft_Azure_DevOps_Services_OAuth_Client_Secret>__# <3>
+stringData:
+  id: __<Microsoft_Azure_DevOps_Services_OAuth_App_ID>__# <2>
+  secret: __<Microsoft_Azure_DevOps_Services_OAuth_Client_Secret>__# <3>
 ----
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
-<2> The Base64-encoded Microsoft Azure DevOps Services OAuth *App ID*.
-<3> The Base64-encoded Microsoft Azure DevOps Services OAuth *Client Secret*.
+<2> The Microsoft Azure DevOps Services OAuth *App ID*.
+<3> The Microsoft Azure DevOps Services OAuth *Client Secret*.
 
 . Apply the Secret:
 +
