--- a/modules/administration-guide/partials/proc_setting-up-an-oauth-consumer-in-the-bitbucket-cloud.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-an-oauth-consumer-in-the-bitbucket-cloud.adoc
@@ -12,7 +12,6 @@ Set up an OAuth consumer for OAuth 2.0 in the Bitbucket Cloud.
 .Prerequisites
 
 * You are logged in to the Bitbucket Cloud.
-* link:https://www.gnu.org/software/coreutils/base64[`base64`] is installed in the operating system you are using.
 
 .Procedure
 
@@ -28,19 +27,9 @@ Set up an OAuth consumer for OAuth 2.0 in the Bitbucket Cloud.
 
 . Under *Permissions*, check all of the *Account* and *Repositories* checkboxes, and click *Save*.
 
-. Expand the added consumer and then copy the *Key* value and encode it to Base64 for use when applying the Bitbucket OAuth consumer Secret:
-+
-[subs="+quotes,+attributes,+macros"]
-----
-$ echo -n '__<bitbucket_oauth_consumer_key>__' | base64
-----
+. Expand the added consumer and then copy and save the *Key* value for use when applying the Bitbucket OAuth consumer Secret:
 
-. Copy the *Secret* value and encode it to Base64 for use when applying the Bitbucket OAuth consumer Secret:
-+
-[subs="+quotes,+attributes,+macros"]
-----
-$ echo -n '__<bitbucket_oauth_consumer_secret>__' | base64
-----
+. Copy and save the *Secret* value for use when applying the Bitbucket OAuth consumer Secret.
 
 .Additional resources
 
