--- a/modules/end-user-guide/pages/enabling-maven-artifact-repositories.adoc
+++ b/modules/end-user-guide/pages/enabling-maven-artifact-repositories.adoc
@@ -30,11 +30,11 @@ metadata:
   labels:
     controller.devfile.io/mount-to-devworkspace: 'true'
     controller.devfile.io/watch-secret: 'true'
-data:
+stringData:
   tls.cer: >-
-    __<Base64_encoded_content_of_public_cert>__ <1>
+    __<Content_of_public_cert>__ <1>
 ----
-<1> Base64 encoding with disabled line wrapping.
+<1> The content of the public cert.
 
 . In the `__<username>__-{prod-id-short}` namespace, apply the ConfigMap to create the `settings.xml` file:
 +
