Revert mounting json/xml files
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/end-user-guide/partials/proc_creating-an-image-pull-secret-from-a-.dockercfg-file.adoc
+++ b/modules/end-user-guide/partials/proc_creating-an-image-pull-secret-from-a-.dockercfg-file.adoc
@@ -7,7 +7,15 @@ If you already store the credentials for the private container registry in a `.d
 
 * An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
 
+* link:https://www.gnu.org/software/coreutils/base64[`base64`] command line tools are installed in the operating system you are using.
+
 .Procedure
+
+. Encode the `.dockercfg` file to Base64:
++
+----
+$ cat .dockercfg | base64 | tr -d '\n'
+----
 
 . Create a new {orch-name} Secret in your user {orch-namespace}:
 +
@@ -20,9 +28,8 @@ metadata:
   labels:
     controller.devfile.io/devworkspace_pullsecret: 'true'
     controller.devfile.io/watch-secret: 'true'
-stringData:
-  .dockercfg: >-
-    __<Content_of_.dockercfg>__
+data:
+  .dockercfg: __<Base64_content_of_.dockercfg>__
 type: kubernetes.io/dockercfg
 ----
 
