--- a/modules/end-user-guide/pages/mounting-secrets.adoc
+++ b/modules/end-user-guide/pages/mounting-secrets.adoc
@@ -67,9 +67,8 @@ metadata:
     controller.devfile.io/watch-secret: 'true'
   annotations:
     controller.devfile.io/mount-path: '/home/user/.m2'
-stringData:
-  settings.xml: >-
-    __<Content_of_settings_xml>__
+data:
+  settings.xml: __<Base64_encoded_content>__
 ----
 
 When you start a workspace, the `/home/user/.m2/settings.xml` file will be available in the `{devworkspace}` containers.
