--- a/modules/end-user-guide/pages/enabling-npm-artifact-repositories.adoc
+++ b/modules/end-user-guide/pages/enabling-npm-artifact-repositories.adoc
@@ -31,11 +31,11 @@ metadata:
   labels:
     controller.devfile.io/mount-to-devworkspace: 'true'
     controller.devfile.io/watch-secret: 'true'
-stringData:
+data:
   nexus.cer: >-
-    __<Content_of_public_cert>__ <1>
+    <Base64_encoded_content_of_public_cert>__ <1>
 ----
-<1> The content of the public cert.
+<1> Base64 encoding with disabled line wrapping.
 
 . Apply the ConfigMap to set the following environment variables in the `tools` container:
 +
