Revert mounting certificates
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/partials/proc_mounting-a-secret-or-a-configmap-as-a-file-into-a-container.adoc
+++ b/modules/administration-guide/partials/proc_mounting-a-secret-or-a-configmap-as-a-file-into-a-container.adoc
@@ -67,9 +67,8 @@ metadata:
   annotations:
     che.eclipse.org/mount-as: file
     che.eclipse.org/mount-path: /data
-stringData:
-  ca.crt: >-
-    __<data_content_here>__
+data:
+  ca.crt: __<base64 encoded data content here>__
 ----
 or
 [source,yaml,subs="+quotes,attributes"]
