--- a/modules/administration-guide/partials/snip_mounting-a-secret-or-a-configmap-into-a-container.adoc
+++ b/modules/administration-guide/partials/snip_mounting-a-secret-or-a-configmap-into-a-container.adoc
@@ -13,7 +13,7 @@
 +
 * The `<DEPLOYMENT_NAME>` corresponds to the one following deployments:
 
-** `keycloak`
+** `{prod-deployment}-dashboard`
 ** `devfile-registry`
 ** `plugin-registry`
 ** `{prod-deployment}`
