--- a/modules/administration-guide/partials/proc_mounting-a-secret-or-a-configmap-as-an-environment-variable-into-a-container.adoc
+++ b/modules/administration-guide/partials/proc_mounting-a-secret-or-a-configmap-as-an-environment-variable-into-a-container.adoc
@@ -15,7 +15,7 @@
 
 include::partial$snip_mounting-a-secret-or-a-configmap-into-a-container.adoc[leveloffset=+1]
 
-Annotations must indicate that the given object is mounted as a environment variable.
+Annotations must indicate that the given object is mounted as an environment variable.
 
 . Configure the annotation values:
 +
