--- a/modules/administration-guide/partials/proc_mounting-a-secret-or-a-configmap-as-a-subpath-into-a-container.adoc
+++ b/modules/administration-guide/partials/proc_mounting-a-secret-or-a-configmap-as-a-subpath-into-a-container.adoc
@@ -90,7 +90,7 @@ data:
 
 This results in a file named `ca.crt` being mounted at the `/data` path of {prod-short} container.
 
-IMPORTANT: To make the changes in a {prod-short} container visible, recreate the object entirely.
+IMPORTANT: To make the changes in a {prod-short} container visible, re-create the object entirely.
 
 .Additional resources
 
