--- a/modules/administration-guide/pages/customizing-openshift-che-consolelink.adoc
+++ b/modules/administration-guide/pages/customizing-openshift-che-consolelink.adoc
@@ -1,5 +1,5 @@
 :_content-type: PROCEDURE
-:description: Customizing OpenShift Eclipse Che ConsoleLink
+:description: Customizing OpenShift Eclipse Che ConsoleLink icon
 :keywords: administration guide, customizing, consolelink
 :navtitle: Customizing OpenShift Eclipse Che ConsoleLink
 :page-aliases: installation-guide:customizing-openshift-che-consolelink.adoc
