--- a/modules/administration-guide/pages/customizing-openshift-che-consolelink.adoc
+++ b/modules/administration-guide/pages/customizing-openshift-che-consolelink.adoc
@@ -1,7 +1,7 @@
 :_content-type: PROCEDURE
 :description: Customizing OpenShift Eclipse Che ConsoleLink icon
 :keywords: administration guide, customizing, consolelink
-:navtitle: Customizing OpenShift Eclipse Che ConsoleLink
+:navtitle: Customizing OpenShift Eclipse Che ConsoleLink icon
 :page-aliases: installation-guide:customizing-openshift-che-consolelink.adoc
 
 [id="customizing-openshift-che-consolelink"]
