--- a/modules/administration-guide/pages/customizing-openshift-che-consolelink.adoc
+++ b/modules/administration-guide/pages/customizing-openshift-che-consolelink.adoc
@@ -5,7 +5,7 @@
 :page-aliases: installation-guide:customizing-openshift-che-consolelink.adoc
 
 [id="customizing-openshift-che-consolelink"]
-= Customizing {ocp} {prod} ConsoleLink
+= Customizing {ocp} {prod} ConsoleLink icon
 
 This procedure describes how to customize {prod} ConsoleLink.
 
