--- a/modules/administration-guide/pages/customizing-openshift-che-consolelink-icon.adoc
+++ b/modules/administration-guide/pages/customizing-openshift-che-consolelink-icon.adoc
@@ -1,13 +1,13 @@
 :_content-type: PROCEDURE
 :description: Customizing OpenShift Eclipse Che ConsoleLink icon
-:keywords: administration guide, customizing, consolelink
+:keywords: administration guide, customizing, consolelink, icon
 :navtitle: Customizing OpenShift Eclipse Che ConsoleLink icon
-:page-aliases: installation-guide:customizing-openshift-che-consolelink.adoc
+:page-aliases: installation-guide:customizing-openshift-che-consolelink-icon.adoc
 
-[id="customizing-openshift-che-consolelink"]
+[id="customizing-openshift-che-consolelink-icon"]
 = Customizing {ocp} {prod} ConsoleLink icon
 
-This procedure describes how to customize {prod} ConsoleLink.
+This procedure describes how to customize {prod} link:https://docs.openshift.com/container-platform/{ocp4-ver}/rest_api/console_apis/consolelink-console-openshift-io-v1.html[ConsoleLink] icon.
 
 .Prerequisites
 
@@ -39,3 +39,7 @@ EOF
 <1> Base64 encoding with disabled line wrapping.
 
 . Wait until the rollout of {prod-deployment}-dashboard finishes.
+
+.Additional resources
+
+* link:https://docs.openshift.com/container-platform/{ocp4-ver}/web_console/customizing-the-web-console.html#creating-custom-links_customizing-web-console[Creating custom links in the web console]
