--- a/modules/administration-guide/partials/proc_mounting-a-secret-or-a-configmap-as-a-subpath-into-a-container.adoc
+++ b/modules/administration-guide/partials/proc_mounting-a-secret-or-a-configmap-as-a-subpath-into-a-container.adoc
@@ -15,16 +15,14 @@
 
 include::partial$snip_mounting-a-secret-or-a-configmap-into-a-container.adoc[leveloffset=+1]
 
-Annotations must indicate that the given object is mounted as a subPath.
-
-. Configure the annotation values:
+. Configure the annotation values. Annotations must indicate that the given object is mounted as a subPath.:
 +
 * `che.eclipse.org/mount-as: subpath` - To indicate that an object is mounted as a subPath.
 * `che.eclipse.org/mount-path: _<TARGET_PATH>_` - To provide a required mount path.
 
 .Example:
 ====
-[source,yaml]
+[source,yaml,subs="+quotes,attributes"]
 ----
 apiVersion: v1
 kind: Secret
@@ -34,10 +32,12 @@ metadata:
     che.eclipse.org/mount-as: subpath
     che.eclipse.org/mount-path: /data
   labels:
+    app.kubernetes.io/part-of: che.eclipse.org
+    app.kubernetes.io/component: {prod-deployment}-secret
 ...
 ----
 or
-[source,yaml]
+[source,yaml,subs="+quotes,attributes"]
 ----
 apiVersion: v1
 kind: ConfigMap
@@ -47,6 +47,8 @@ metadata:
     che.eclipse.org/mount-as: subpath
     che.eclipse.org/mount-path: /data
   labels:
+    app.kubernetes.io/part-of: che.eclipse.org
+    app.kubernetes.io/component: {prod-deployment}-configmap
 ...
 ----
 ====
@@ -90,7 +92,7 @@ data:
 
 This results in a file named `ca.crt` being mounted at the `/data` path of {prod-short} container.
 
-IMPORTANT: To make the changes in a {prod-short} container visible, re-create the object entirely.
+IMPORTANT: To make the changes in a {prod-short} container visible, re-create the Secret or the ConfigMap object entirely.
 
 .Additional resources
 
