--- a/modules/administration-guide/pages/configuring-advanced-authorization.adoc
+++ b/modules/administration-guide/pages/configuring-advanced-authorization.adoc
@@ -37,7 +37,7 @@ spec:
 <3> List of users denied access to {prod}.
 <4> List of groups of users denied to access {prod} (for {ocp} only).
 +
-To allow a user to access {prod-short}, add him to the `allowUsers` list or a group where he is member of to `allowGroups` list.
+To allow a user to access {prod-short}, add them to the `allowUsers` list. Alternatively, choose a group the user is a member of and add the group to the `allowGroups` list.
 To deny a user to access {prod-short}, add him to the `denyUsers` list or a group where he is member of to `denyGroups` list.
 If user is in both `allow` and `deny` lists, then he is denied access to {prod-short}.
 +
