--- a/modules/administration-guide/pages/configuring-advanced-authorization.adoc
+++ b/modules/administration-guide/pages/configuring-advanced-authorization.adoc
@@ -39,7 +39,7 @@ spec:
 +
 To allow a user to access {prod-short}, add them to the `allowUsers` list. Alternatively, choose a group the user is a member of and add the group to the `allowGroups` list.
 To deny a user to access {prod-short}, add him to the `denyUsers` list or a group where he is member of to `denyGroups` list.
-If user is in both `allow` and `deny` lists, then he is denied access to {prod-short}.
+If the user is on both `allow` and `deny` lists, they are denied access to {prod-short}.
 +
 If `allowUsers` and `allowGroups` are empty, then all users are allowed to access {prod-short} except ones from `deny` lists.
 if `denyUsers` and `denyGroups` are empty, then only users from `allow` lists are allowed to access {prod-short}.
