--- a/modules/administration-guide/pages/configuring-advanced-authorization.adoc
+++ b/modules/administration-guide/pages/configuring-advanced-authorization.adoc
@@ -41,7 +41,7 @@ To allow a user to access {prod-short}, add them to the `allowUsers` list. Alter
 To deny a user access to {prod-short}, add them to the `denyUsers` list. Alternatively, choose a group the user is a member of and add the group to the `denyGroups` list.
 If the user is on both `allow` and `deny` lists, they are denied access to {prod-short}.
 +
-If `allowUsers` and `allowGroups` are empty, then all users are allowed to access {prod-short} except ones from `deny` lists.
+If `allowUsers` and `allowGroups` are empty, all users are allowed to access {prod-short} except the ones on the `deny` lists.
 if `denyUsers` and `denyGroups` are empty, then only users from `allow` lists are allowed to access {prod-short}.
 +
 If `allow` and `deny` lists are empty, then all users are allowed to access {prod-short}.
