--- a/modules/administration-guide/pages/configuring-advanced-authorization.adoc
+++ b/modules/administration-guide/pages/configuring-advanced-authorization.adoc
@@ -42,7 +42,7 @@ To deny a user access to {prod-short}, add them to the `denyUsers` list. Alterna
 If the user is on both `allow` and `deny` lists, they are denied access to {prod-short}.
 +
 If `allowUsers` and `allowGroups` are empty, all users are allowed to access {prod-short} except the ones on the `deny` lists.
-if `denyUsers` and `denyGroups` are empty, then only users from `allow` lists are allowed to access {prod-short}.
+If `denyUsers` and `denyGroups` are empty, only the users from `allow` lists are allowed to access {prod-short}.
 +
 If `allow` and `deny` lists are empty, then all users are allowed to access {prod-short}.
 
