--- a/modules/administration-guide/pages/configuring-advanced-authorization.adoc
+++ b/modules/administration-guide/pages/configuring-advanced-authorization.adoc
@@ -44,6 +44,6 @@ If the user is on both `allow` and `deny` lists, they are denied access to {prod
 If `allowUsers` and `allowGroups` are empty, all users are allowed to access {prod-short} except the ones on the `deny` lists.
 If `denyUsers` and `denyGroups` are empty, only the users from `allow` lists are allowed to access {prod-short}.
 +
-If `allow` and `deny` lists are empty, then all users are allowed to access {prod-short}.
+If both `allow` and `deny` lists are empty, all users are allowed to access {prod-short}.
 
 . Wait for the rollout of the {prod-short} server components to be completed.
