--- a/modules/administration-guide/pages/configuring-advanced-authorization.adoc
+++ b/modules/administration-guide/pages/configuring-advanced-authorization.adoc
@@ -37,13 +37,18 @@ spec:
 <3> List of users denied access to {prod}.
 <4> List of groups of users denied to access {prod} (for {ocp} only).
 +
+. Wait for the rollout of the {prod-short} server components to be completed.
+
+[NOTE]
+====
+
 To allow a user to access {prod-short}, add them to the `allowUsers` list. Alternatively, choose a group the user is a member of and add the group to the `allowGroups` list.
 To deny a user access to {prod-short}, add them to the `denyUsers` list. Alternatively, choose a group the user is a member of and add the group to the `denyGroups` list.
 If the user is on both `allow` and `deny` lists, they are denied access to {prod-short}.
-+
+
 If `allowUsers` and `allowGroups` are empty, all users are allowed to access {prod-short} except the ones on the `deny` lists.
 If `denyUsers` and `denyGroups` are empty, only the users from `allow` lists are allowed to access {prod-short}.
-+
+
 If both `allow` and `deny` lists are empty, all users are allowed to access {prod-short}.
 
-. Wait for the rollout of the {prod-short} server components to be completed.
+====
