feat: Customizing OpenShift Eclipse Che ConsoleLink (#2666)
* feat: Customizing OpenShift Eclipse Che ConsoleLink

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

* fixup

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

* Update modules/administration-guide/partials/proc_mounting-a-secret-or-a-configmap-as-a-subpath-into-a-container.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* Update modules/administration-guide/partials/proc_mounting-a-secret-or-a-configmap-as-a-subpath-into-a-container.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* Update modules/administration-guide/pages/customizing-openshift-che-consolelink.adoc

Co-authored-by: Ilya Buziuk <ibuziuk@redhat.com>

* Update modules/administration-guide/pages/customizing-openshift-che-consolelink.adoc

Co-authored-by: Ilya Buziuk <ibuziuk@redhat.com>

* Update modules/administration-guide/pages/customizing-openshift-che-consolelink.adoc

Co-authored-by: Ilya Buziuk <ibuziuk@redhat.com>

* Address remarks

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

---------

Signed-off-by: Anatolii Bazko <abazko@redhat.com>
Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>
Co-authored-by: Ilya Buziuk <ibuziuk@redhat.com>

--- a/modules/administration-guide/pages/configuring-dashboard.adoc
+++ b/modules/administration-guide/pages/configuring-dashboard.adoc
@@ -8,3 +8,6 @@
 = Configuring dashboard
 
 * xref:configuring-getting-started-samples.adoc[]
+
+* xref:customizing-openshift-che-consolelink-icon.adoc[]
+
