--- a/modules/administration-guide/partials/proc_mounting-a-secret-or-a-configmap-as-a-subpath-into-a-container.adoc
+++ b/modules/administration-guide/partials/proc_mounting-a-secret-or-a-configmap-as-a-subpath-into-a-container.adoc
@@ -3,8 +3,8 @@
 // mounting-a-secret-or-a-configmap-as-a-file-or-an-environment-variable-into-a-container
 
 
-[id="mounting-a-secret-or-a-configmap-as-a-file-into-a-container"]
-= Mounting a Secret or a ConfigMap as a file into a {prod-short} container
+[id="mounting-a-secret-or-a-configmap-as-a-subpath-into-a-container"]
+= Mounting a Secret or a ConfigMap as a subPath into a {prod-short} container
 
 
 .Prerequisites
@@ -15,9 +15,9 @@
 
 include::partial$snip_mounting-a-secret-or-a-configmap-into-a-container.adoc[leveloffset=+1]
 
-. Configure the annotation values. Annotations must indicate that the given object is mounted as a file:
+. Configure the annotation values. Annotations must indicate that the given object is mounted as a subPath.:
 +
-* `che.eclipse.org/mount-as: file` - To indicate that a object is mounted as a file.
+* `che.eclipse.org/mount-as: subpath` - To indicate that an object is mounted as a subPath.
 * `che.eclipse.org/mount-path: _<TARGET_PATH>_` - To provide a required mount path.
 
 .Example:
@@ -29,7 +29,7 @@ kind: Secret
 metadata:
   name: custom-data
   annotations:
-    che.eclipse.org/mount-as: file
+    che.eclipse.org/mount-as: subpath
     che.eclipse.org/mount-path: /data
   labels:
     app.kubernetes.io/part-of: che.eclipse.org
@@ -44,7 +44,7 @@ kind: ConfigMap
 metadata:
   name: custom-data
   annotations:
-    che.eclipse.org/mount-as: file
+    che.eclipse.org/mount-as: subpath
     che.eclipse.org/mount-path: /data
   labels:
     app.kubernetes.io/part-of: che.eclipse.org
@@ -53,7 +53,7 @@ metadata:
 ----
 ====
 
-The {orch-name} object can contain several items whose names must match the desired file name mounted into the container.
+The {orch-name} object can contain several items whose names must match the file name mounted into the container.
 
 .Example:
 ====
@@ -67,7 +67,7 @@ metadata:
     app.kubernetes.io/part-of: che.eclipse.org
     app.kubernetes.io/component: {prod-deployment}-secret
   annotations:
-    che.eclipse.org/mount-as: file
+    che.eclipse.org/mount-as: subpath
     che.eclipse.org/mount-path: /data
 data:
   ca.crt: __<base64 encoded data content here>__
@@ -83,7 +83,7 @@ metadata:
     app.kubernetes.io/part-of: che.eclipse.org
     app.kubernetes.io/component: {prod-deployment}-configmap
   annotations:
-    che.eclipse.org/mount-as: file
+    che.eclipse.org/mount-as: subpath
     che.eclipse.org/mount-path: /data
 data:
   ca.crt: __<data content here>__
