--- a/modules/administration-guide/partials/proc_mounting-a-secret-or-a-configmap-as-an-environment-variable-into-a-container.adoc
+++ b/modules/administration-guide/partials/proc_mounting-a-secret-or-a-configmap-as-an-environment-variable-into-a-container.adoc
@@ -15,16 +15,14 @@
 
 include::partial$snip_mounting-a-secret-or-a-configmap-into-a-container.adoc[leveloffset=+1]
 
-Annotations must indicate that the given object is mounted as a environment variable.
-
-. Configure the annotation values:
+. Configure the annotation values. Annotations must indicate that the given object is mounted as an environment variable:
 +
 * `che.eclipse.org/mount-as: env` - to indicate that a object is mounted as an environment variable
 * `che.eclipse.org/env-name: _<FOO_ENV>_` - to provide an environment variable name, which is required to mount a object key value
 
 .Example:
 ====
-[source,yaml]
+[source,yaml,subs="+quotes,attributes"]
 ----
 apiVersion: v1
 kind: Secret
@@ -34,12 +32,13 @@ metadata:
     che.eclipse.org/env-name: FOO_ENV
     che.eclipse.org/mount-as: env
   labels:
-   ...
+    app.kubernetes.io/part-of: che.eclipse.org
+    app.kubernetes.io/component: {prod-deployment}-secret
 data:
   mykey: myvalue
 ----
 or
-[source,yaml]
+[source,yaml,subs="+quotes,attributes"]
 ----
 apiVersion: v1
 kind: ConfigMap
@@ -49,7 +48,8 @@ metadata:
     che.eclipse.org/env-name: FOO_ENV
     che.eclipse.org/mount-as: env
   labels:
-   ...
+    app.kubernetes.io/part-of: che.eclipse.org
+    app.kubernetes.io/component: {prod-deployment}-configmap
 data:
   mykey: myvalue
 ----
@@ -67,7 +67,7 @@ If the object provides more than one data item, the environment variable name mu
 
 .Example:
 ====
-[source,yaml]
+[source,yaml,subs="+quotes,attributes"]
 ----
 apiVersion: v1
 kind: Secret
@@ -78,13 +78,14 @@ metadata:
     che.eclipse.org/mykey_env-name: FOO_ENV
     che.eclipse.org/otherkey_env-name: OTHER_ENV
   labels:
-   ...
+    app.kubernetes.io/part-of: che.eclipse.org
+    app.kubernetes.io/component: {prod-deployment}-secret
 stringData:
   mykey: __<data_content_here>__
   otherkey: __<data_content_here>__
 ----
 or
-[source,yaml]
+[source,yaml,subs="+quotes,attributes"]
 ----
 apiVersion: v1
 kind: ConfigMap
@@ -95,7 +96,8 @@ metadata:
     che.eclipse.org/mykey_env-name: FOO_ENV
     che.eclipse.org/otherkey_env-name: OTHER_ENV
   labels:
-   ...
+    app.kubernetes.io/part-of: che.eclipse.org
+    app.kubernetes.io/component: {prod-deployment}-configmap
 data:
   mykey: __<data content here>__
   otherkey: __<data content here>__
@@ -112,7 +114,7 @@ being provisioned into a {prod-short} container.
 
 NOTE: The maximum length of annotation names in a {orch-name} object is 63 characters, where 9 characters are reserved for a prefix that ends with `/`. This acts as a restriction for the maximum length of the key that can be used for the object.
 
-IMPORTANT: To make the changes in a {prod-short} container visible, recreate the object entirely.
+IMPORTANT: To make the changes in a {prod-short} container visible, re-create the Secret or the ConfigMap object entirely.
 
 .Additional resources
 
