--- a/modules/administration-guide/pages/configuring-network-policies.adoc
+++ b/modules/administration-guide/pages/configuring-network-policies.adoc
@@ -74,7 +74,7 @@ spec:
 +
 <1> The {prod-short} namespace.
 The default is `{prod-namespace}`.
-<2> The `podSelector` only selects webhook-server pods
+<2> The `podSelector` only selects devworkspace-webhook-server pods
 +
 .`allow-from-workspaces-namespaces.yaml`
 ====
@@ -102,7 +102,7 @@ spec:
 +
 <1> The {prod-short} namespace.
 The default is `{prod-namespace}`.
-<2> The `podSelector` only selects webhook-server pods
+<2> The `podSelector` only selects che-gateway pods
 
 .Additional resources
 * xref:configuring-namespace-provisioning.adoc[]
