--- a/modules/administration-guide/partials/proc_creating-lets-encrypt-certificate-for-che-on-microsoft-azure.adoc
+++ b/modules/administration-guide/partials/proc_creating-lets-encrypt-certificate-for-che-on-microsoft-azure.adoc
@@ -98,7 +98,9 @@ spec:
     - data encipherment
 EOF
 ----
-
+IMPORTANT: If you use a registrar like GoDaddy, you will need to duplicate DNS records in your registrar of
+type `TXT` and name `_acme-challenge`.
++
 .Additional resources
 
 * link:https://cert-manager.io/docs/tutorials/getting-started-aks-letsencrypt[Deploy cert-manager on Azure Kubernetes Service (AKS) and use Let's Encrypt to sign a certificate for an HTTPS website]
