--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -17,8 +17,9 @@
 * xref:installing-che.adoc[]
 ** xref:installing-che-on-openshift-using-cli.adoc[]
 ** xref:installing-che-on-openshift-using-the-web-console.adoc[]
-** xref:installing-che-on-microsoft-azure.adoc[]
 ** xref:installing-che-in-a-restricted-environment.adoc[]
+** xref:installing-che-in-the-cloud.adoc[]
+*** xref:installing-che-on-microsoft-azure.adoc[]
 ** xref:installing-che-locally.adoc[]
 *** xref:installing-che-on-red-hat-openshift-local.adoc[]
 *** xref:installing-che-on-minikube.adoc[]
