--- a/modules/administration-guide/pages/installing-che-on-microsoft-azure.adoc
+++ b/modules/administration-guide/pages/installing-che-on-microsoft-azure.adoc
@@ -14,7 +14,7 @@ This section provides information about installing, enabling, and basic use of {
 
 * `helm` the package manager for {kubernetes}. See: link:https://helm.sh/docs/intro/install/[Installing Helm].
 
-* `az` the Azure CLI command line tool. See: link:https://docs.microsoft.com/en-us/cli/azure/install-azure-cli?view=azure-cli-latest[How to install the Azure CLI].
+* `az` the Microsoft Azure CLI command line tool. See: link:https://docs.microsoft.com/en-us/cli/azure/install-azure-cli?view=azure-cli-latest[How to install Microsoft Azure CLI].
 
 * `kubelogin` the credential plugins See: link:https://learn.microsoft.com/en-us/cli/azure/aks?view=azure-cli-latest#az-aks-install-cli[How to install kubelogin].
 
