--- a/modules/administration-guide/partials/proc_configuring-dns-on-microsoft-azure.adoc
+++ b/modules/administration-guide/partials/proc_configuring-dns-on-microsoft-azure.adoc
@@ -39,4 +39,4 @@ IP address of the ingress controller.
 +
 .Additional resources
 
-* link:https://learn.microsoft.com/en-us/azure/dns/dns-getstarted-cli[Create an Azure DNS zone and record using Azure CLI]
+* link:https://learn.microsoft.com/en-us/azure/dns/dns-getstarted-cli[Create a Microsoft Azure DNS zone and record using Microsoft Azure CLI]
