--- a/modules/administration-guide/partials/proc_creating-lets-encrypt-certificate-for-che-on-microsoft-azure.adoc
+++ b/modules/administration-guide/partials/proc_creating-lets-encrypt-certificate-for-che-on-microsoft-azure.adoc
@@ -98,7 +98,7 @@ spec:
     - data encipherment
 EOF
 ----
-IMPORTANT: If you use a registrar like GoDaddy, you will need to duplicate DNS records in your registrar of
+IMPORTANT: If you use a registrar such as GoDaddy, you will need to duplicate DNS records in your registrar of
 type `TXT` and name `_acme-challenge`.
 +
 .Additional resources
